parser/tests/bad/ref04.st
% identifier '%s' has unsubscriptable type

const b := false
const c := b[1]
